vpc/vpc-1.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: VPC Nested Stack for Max's Development Environment
  
Parameters:  
  VpcCidr:
    Description: Enter the VPC CIDR Block
    Type: String
    ConstraintDescription: Support subnet sizes of /16 to /22 only. i.e. 10.0.0.0/16
    AllowedPattern: "^((\\d)+.){3}(0)\\/(16|17|18|19|20|21|22)"

  PublicSubnetCIDR:
    Description: Public Subnet CIDR
    Type: String
    AllowedPattern: "^(((\\d)+.){3}(0)\\/(18|19|20|21|22|23|24|25)|)"

  PublicSubnetCIDR2:
    Description: Public Subnet 2 CIDR
    Type: String
    AllowedPattern: "^(((\\d)+.){3}(0)\\/(18|19|20|21|22|23|24|25)|)"

  PrivateSubnetCIDR:
    Description: Private Subnet CIDR
    Type: String
    AllowedPattern: "^(((\\d)+.){3}(0)\\/(18|19|20|21|22|23|24|25)|)"

  PrivateSubnetCIDR2:
    Description: Private Subnet 2 CIDR
    Type: String
    AllowedPattern: "^(((\\d)+.){3}(0)\\/(18|19|20|21|22|23|24|25)|)"    

Conditions:
  CreateSubnetA:
    Fn::And:
    - Fn::Not:
      - Fn::Equals:
        - Ref: PublicSubnetCIDR
        - ''

    - Fn::Not:
      - Fn::Equals:
        - Ref: PublicSubnetCIDR2
        - ''

    - Fn::Not:
      - Fn::Equals:
        - Ref: PrivateSubnetCIDR
        - ''

    - Fn::Not:
      - Fn::Equals:
        - Ref: PrivateSubnetCIDR2
        - ''        

Resources:
  maxVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 
        Ref: VpcCidr
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: 'default'
      Tags:
        - Key: Name
          Value: max-dev-env-vpc

        - Key: Environment
          Value: Development

  maxPublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: maxVpc
      CidrBlock:
        Ref: PublicSubnetCIDR
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: 
              Ref: 'AWS::Region'
      MapPublicIpOnLaunch: 'true'
      Tags:
        - Key: Name
          Value: max-dev-subnet-public
        
        - Key: Network
          Value: Public

        - Key: Environment
          Value: Development

  maxPublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: maxVpc
      CidrBlock:
        Ref: PublicSubnetCIDR2
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: 
              Ref: 'AWS::Region'
      MapPublicIpOnLaunch: 'true'              
      Tags:
        - Key: Name
          Value: max-dev-subnet-public-2
        
        - Key: Network
          Value: Public

        - Key: Environment
          Value: Development

  maxPrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: maxVpc
      CidrBlock:
        Ref: PrivateSubnetCIDR
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: 
              Ref: 'AWS::Region'
      Tags:
        - Key: Name
          Value: max-dev-subnet-private
        
        - Key: Network
          Value: Private

        - Key: Environment
          Value: Development                    

  maxPrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: maxVpc
      CidrBlock:
        Ref: PrivateSubnetCIDR2
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: 
              Ref: 'AWS::Region'
      Tags:
        - Key: Name
          Value: max-dev-subnet-private-2
        
        - Key: Network
          Value: Private

        - Key: Environment
          Value: Development 

  maxIGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: max-dev-igw

        - Key: Network
          Value: Public

  maxVpcGatewayAttach:
    DependsOn:
      - maxVpc
      - maxIGW
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: maxVpc
      InternetGatewayId:
        Ref: maxIGW

  maxPublicRouteTable:
    DependsOn:
      - maxVpc
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: maxVpc
      Tags:
        - Key: Name
          Value: max-dev-route-public

        - Key: Network
          Value: Public

  maxPublicRoute:
    DependsOn:
      - maxPublicRouteTable
      - maxIGW
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: maxPublicRouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId:
        Ref: maxIGW

  maxPublicSubnetRouteTableAssociation:
    DependsOn:
      - maxPublicSubnet
      - maxPublicRouteTable
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: maxPublicSubnet
      RouteTableId:
        Ref: maxPublicRouteTable

  maxPublicSubnetRouteTableAssociation2:
    DependsOn:
      - maxPublicSubnet2
      - maxPublicRouteTable
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: maxPublicSubnet2
      RouteTableId:
        Ref: maxPublicRouteTable        
  
  maxPrivateRouteTable:
    DependsOn:
      - maxVpc
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: maxVpc
      Tags:
        - Key: Name
          Value: max-dev-route-private

        - Key: Network
          Value: Private

  maxPrivateSubnetRouteTableAssociation:
    DependsOn:
      - maxPrivateSubnet
      - maxPrivateRouteTable
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: maxPrivateSubnet
      RouteTableId:
        Ref: maxPrivateRouteTable

  maxPrivateSubnetRouteTableAssociation2:
    DependsOn:
      - maxPrivateSubnet2
      - maxPrivateRouteTable
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: maxPrivateSubnet2
      RouteTableId:
        Ref: maxPrivateRouteTable        

  maxNATGW:
    Type: AWS::EC2::NatGateway
    DependsOn:
      - maxVpcGatewayAttach
    Properties:
      AllocationId:
        Fn::GetAtt:
          - maxNATGWEIP
          - AllocationId
      SubnetId:
        Ref: maxPublicSubnet

  maxNATGWEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: 'vpc'

  maxNATRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: maxPrivateRouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId:
        Ref: maxNATGW

Outputs:
  VpcId:
    Value:
      Ref: maxVpc
    Description: 'VPC ID for max-dev-env'

  PublicSubnet:
    Value:
      Ref: maxPublicSubnet
    Description: '1st Public Subnet for max-dev-env'

  PublicSubnet2:
    Value:
      Ref: maxPublicSubnet2
    Description: '2nd Public Subnet for max-dev-env'    

  PrivateSubnet:
    Value:
      Ref: maxPrivateSubnet
    Description: 'Private Subnet for max-dev-env' 

  PrivateSubnet2:
    Value:
      Ref: maxPrivateSubnet2
    Description: 'Private Subnet 2 for max-dev-env' 

  IGW:
    Value:
      Ref: maxIGW
    Description: 'IGW for max-dev-env'   

  NATGW:
    Value:
      Ref: maxNATGW
    Description: 'NAT GW for max-dev-env'   

  EIP:
    Value:
      Ref: maxNATGWEIP
    Description: 'Elastic IP attached for max-dev-env'
